recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: type mismatch;
 found   : Int
 required: Boolean
	if(steps)
           ^